WIP Update ModLauncher on SpongeVanilla