@@ -7,6 +7,9 @@ plugins {
 }
 
 val commonProject = parent!!
+val transformersProject = parent!!.project(":modlauncher-transformers")
+val testPluginsProject: Project? = rootProject.subprojects.find { "testplugins" == it.name }
+
 val apiVersion: String by project
 val apiJavaTarget: String by project
 val minecraftVersion: String by project
@@ -14,45 +17,63 @@ val recommendedVersion: String by project
 val organization: String by project
 val projectUrl: String by project
 
-val testplugins: Project? = rootProject.subprojects.find { "testplugins".equals(it.name) }
-
 description = "The SpongeAPI implementation for Vanilla Minecraft"
 version = spongeImpl.generatePlatformBuildVersionString(apiVersion, minecraftVersion, recommendedVersion)
 
-// Vanilla extra configurations
-val vanillaBootstrapLibrariesConfig = configurations.register("bootstrapLibraries")
-val vanillaLibrariesConfig = configurations.register("libraries")
-val mlTransformersConfig = configurations.register("mlTransformers")
-val vanillaAppLaunchConfig = configurations.register("applaunch") {
-    extendsFrom(vanillaBootstrapLibrariesConfig.get())
+// SpongeVanilla libraries
+val installerLibrariesConfig: NamedDomainObjectProvider<Configuration> = configurations.register("spongeInstallerLibraries")
+val bootstrapLibrariesConfig: NamedDomainObjectProvider<Configuration> = configurations.register("spongeBootstrapModules") // JVM initial classpath
+val launcherLibrariesConfig: NamedDomainObjectProvider<Configuration> = configurations.register("spongeLauncherLibraries") // ModLauncher boot
+val serviceLibrariesConfig: NamedDomainObjectProvider<Configuration> = configurations.register("spongeServiceLibraries")
+val gameLibrariesConfig: NamedDomainObjectProvider<Configuration> = configurations.register("spongeGameLibraries")
+
+val gameManagedLibrariesConfig: NamedDomainObjectProvider<Configuration> = configurations.register("spongeGameManagedLibraries")
+
+val gameShadedLibrariesConfig: NamedDomainObjectProvider<Configuration> = configurations.register("spongeGameShadedLibraries")
+
+val runTaskOnlyConfig: NamedDomainObjectProvider<Configuration> = configurations.register("runTaskOnly")
+
+// ModLauncher layers
+val bootLayerConfig: NamedDomainObjectProvider<Configuration> = configurations.register("bootLayer") {
+    extendsFrom(bootstrapLibrariesConfig.get())
+    extendsFrom(launcherLibrariesConfig.get())
+}
+val serviceLayerConfig: NamedDomainObjectProvider<Configuration> = configurations.register("serviceLayer") {
+    extendsFrom(bootLayerConfig.get())
+    extendsFrom(serviceLibrariesConfig.get())
+}
+val langLayerConfig: NamedDomainObjectProvider<Configuration> = configurations.register("langLayer") {
+    extendsFrom(bootLayerConfig.get())
+}
+val gameLayerConfig: NamedDomainObjectProvider<Configuration> = configurations.register("gameLayer") {
+    extendsFrom(serviceLayerConfig.get())
+    extendsFrom(langLayerConfig.get())
+    extendsFrom(gameLibrariesConfig.get())
     extendsFrom(configurations.minecraft.get())
-    extendsFrom(mlTransformersConfig.get())
-}
-val mlpatcherConfig = configurations.register("mlpatcher")
-val vanillaInstallerConfig = configurations.register("installer") {
-    extendsFrom(mlpatcherConfig.get())
-    extendsFrom(mlTransformersConfig.get())
 }
 
-// Common source sets and configurations
-val launchConfig = commonProject.configurations.named("launch")
-val accessors = commonProject.sourceSets.named("accessors")
-val launch = commonProject.sourceSets.named("launch")
-val applaunch = commonProject.sourceSets.named("applaunch")
-val mixins = commonProject.sourceSets.named("mixins")
-val main = commonProject.sourceSets.named("main")
+// SpongeCommon source sets
+val accessors: NamedDomainObjectProvider<SourceSet> = commonProject.sourceSets.named("accessors")
+val launch: NamedDomainObjectProvider<SourceSet> = commonProject.sourceSets.named("launch")
+val applaunch: NamedDomainObjectProvider<SourceSet> = commonProject.sourceSets.named("applaunch")
+val mixins: NamedDomainObjectProvider<SourceSet> = commonProject.sourceSets.named("mixins")
+val main: NamedDomainObjectProvider<SourceSet> = commonProject.sourceSets.named("main")
 
-// Vanilla source sets
-val vanillaInstaller by sourceSets.register("installer")
+// SpongeVanilla source sets
+val vanillaInstaller by sourceSets.register("installer") {
+    configurations.named(implementationConfigurationName) {
+        extendsFrom(installerLibrariesConfig.get())
+    }
+}
 
 val vanillaMain by sourceSets.named("main") {
     // implementation (compile) dependencies
     spongeImpl.applyNamedDependencyOnOutput(commonProject, accessors.get(), this, project, this.implementationConfigurationName)
     spongeImpl.applyNamedDependencyOnOutput(commonProject, launch.get(), this, project, this.implementationConfigurationName)
     spongeImpl.applyNamedDependencyOnOutput(commonProject, applaunch.get(), this, project, this.implementationConfigurationName)
+
     configurations.named(implementationConfigurationName) {
-        extendsFrom(vanillaLibrariesConfig.get())
-        extendsFrom(vanillaBootstrapLibrariesConfig.get())
+        extendsFrom(gameLayerConfig.get())
     }
 }
 val vanillaLaunch by sourceSets.register("launch") {
@@ -63,18 +84,17 @@ val vanillaLaunch by sourceSets.register("launch") {
     spongeImpl.applyNamedDependencyOnOutput(project, this, vanillaMain, project, vanillaMain.implementationConfigurationName)
 
     configurations.named(implementationConfigurationName) {
-        extendsFrom(vanillaLibrariesConfig.get())
-        extendsFrom(vanillaAppLaunchConfig.get())
+        extendsFrom(gameLayerConfig.get())
     }
 }
 val vanillaAccessors by sourceSets.register("accessors") {
     spongeImpl.applyNamedDependencyOnOutput(commonProject, mixins.get(), this, project, this.implementationConfigurationName)
     spongeImpl.applyNamedDependencyOnOutput(commonProject, accessors.get(), this, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(commonProject, launch.get(), this, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(commonProject, applaunch.get(), this, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(commonProject, main.get(), this, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaMain, this, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaLaunch, this, project, this.implementationConfigurationName)
+    spongeImpl.applyNamedDependencyOnOutput(project, this, vanillaLaunch, project, vanillaLaunch.implementationConfigurationName)
+
+    configurations.named(implementationConfigurationName) {
+        extendsFrom(gameLayerConfig.get())
+    }
 }
 val vanillaMixins by sourceSets.register("mixins") {
     // implementation (compile) dependencies
@@ -84,50 +104,31 @@ val vanillaMixins by sourceSets.register("mixins") {
     spongeImpl.applyNamedDependencyOnOutput(commonProject, applaunch.get(), this, project, this.implementationConfigurationName)
     spongeImpl.applyNamedDependencyOnOutput(commonProject, main.get(), this, project, this.implementationConfigurationName)
     spongeImpl.applyNamedDependencyOnOutput(project, vanillaMain, this, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaLaunch, this, project, this.implementationConfigurationName)
     spongeImpl.applyNamedDependencyOnOutput(project, vanillaAccessors, this, project, this.implementationConfigurationName)
+    spongeImpl.applyNamedDependencyOnOutput(project, vanillaLaunch, this, project, this.implementationConfigurationName)
+
+    configurations.named(implementationConfigurationName) {
+        extendsFrom(gameLayerConfig.get())
+    }
+}
+val vanillaLang by sourceSets.register("lang") {
+    configurations.named(implementationConfigurationName) {
+        extendsFrom(langLayerConfig.get())
+    }
 }
 val vanillaAppLaunch by sourceSets.register("applaunch") {
     // implementation (compile) dependencies
     spongeImpl.applyNamedDependencyOnOutput(commonProject, applaunch.get(), this, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(commonProject, launch.get(), vanillaLaunch, project, this.implementationConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaInstaller, this, project, this.implementationConfigurationName)
     spongeImpl.applyNamedDependencyOnOutput(project, this, vanillaLaunch, project, vanillaLaunch.implementationConfigurationName)
-    // runtime dependencies - literally add the rest of the project, because we want to launch the game
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaMixins, this, project, this.runtimeOnlyConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaLaunch, this, project, this.runtimeOnlyConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(commonProject, mixins.get(), this, project, this.runtimeOnlyConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(commonProject, main.get(), this, project, this.runtimeOnlyConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(commonProject, accessors.get(), this, project, this.runtimeOnlyConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaMain, this, project, this.runtimeOnlyConfigurationName)
-    spongeImpl.applyNamedDependencyOnOutput(project, vanillaAccessors, this, project, this.runtimeOnlyConfigurationName)
 
-    configurations.named(runtimeClasspathConfigurationName) {
-        extendsFrom(vanillaLibrariesConfig.get())
-        extendsFrom(mlpatcherConfig.get())
-        extendsFrom(mlTransformersConfig.get())
+    configurations.named(implementationConfigurationName) {
+        extendsFrom(serviceLayerConfig.get())
     }
 }
 
-val vanillaAccessorsImplementation by configurations.named(vanillaAccessors.implementationConfigurationName) {
-    extendsFrom(vanillaAppLaunchConfig.get())
-}
-val vanillaMixinsImplementation by configurations.named(vanillaMixins.implementationConfigurationName) {
-    extendsFrom(vanillaAppLaunchConfig.get())
-    extendsFrom(vanillaLibrariesConfig.get())
-}
-configurations.named(vanillaInstaller.implementationConfigurationName) {
-    extendsFrom(vanillaInstallerConfig.get())
-}
-
-configurations.named(vanillaAppLaunch.implementationConfigurationName) {
-    extendsFrom(vanillaAppLaunchConfig.get())
-    extendsFrom(launchConfig.get())
-}
-val vanillaAppLaunchRuntime by configurations.named(vanillaAppLaunch.runtimeOnlyConfigurationName)
-
 val superclassConfigs = spongeImpl.getNamedConfigurations("superClassChanges")
 val mixinConfigs = spongeImpl.mixinConfigurations
+
 minecraft {
     runs {
         // Full development environment
@@ -161,27 +162,11 @@ minecraft {
                 "-Dmixin.debug.strict=true",
                 "-Dmixin.debug.strict.unique=false"
             )
-            allJvmArgumentProviders += CommandLineArgumentProvider {
-                // todo: Mixin agent does not currently work in 0.8.4
-                /*// Resolve the Mixin artifact for use as a reload agent
-                val mixinJar = vanillaAppLaunchConfig.get().resolvedConfiguration
-                        .getFiles { it.name == "mixin" && it.group == "org.spongepowered" }
-                        .firstOrNull()
 
-                // The mixin agent initializes logging too early, which prevents jansi from properly stripping escape codes in Eclipse.
-                val base = if (!org.spongepowered.gradle.vanilla.internal.util.IdeConfigurer.isEclipseImport() && mixinJar != null) {
-                    listOf("-javaagent:$mixinJar")
-                } else {
-                    emptyList()
-                }*/
+            // ModLauncher
+            jvmArgs("-Dbsl.debug=true") // Uncomment to debug bootstrap classpath
+            mainClass("net.minecraftforge.bootstrap.ForgeBootstrap")
 
-                // Then add necessary module cracks
-                listOf(
-                    "--add-exports=java.base/sun.security.util=ALL-UNNAMED", // ModLauncher
-                    "--add-opens=java.base/java.util.jar=ALL-UNNAMED", // ModLauncher
-                    "-javaagent:${mlpatcherConfig.get().resolvedConfiguration.files.firstOrNull()}"
-                )
-            }
             allArgumentProviders += CommandLineArgumentProvider {
                 mixinConfigs.asSequence()
                         .flatMap { sequenceOf("--mixin.config", it) }
@@ -192,25 +177,45 @@ minecraft {
                     .flatMap { sequenceOf("--superclass_change.config", it) }
                     .toList()
             }
-            mainClass("org.spongepowered.vanilla.applaunch.Main")
-            classpath.setFrom(
-                vanillaAppLaunch.output,
-                vanillaAppLaunch.runtimeClasspath,
-            )
-            ideaRunSourceSet.set(vanillaAppLaunch)
+        }
+
+        all {
+            tasks.named(this.name, JavaExec::class) {
+                // Put modules in boot layer
+                classpath = files(
+                    vanillaAppLaunch.output,
+                    vanillaAppLaunch.runtimeClasspath,
+                    runTaskOnlyConfig
+                )
+
+                // Merge applaunch sourcesets in a single module
+                val applaunchOutputs = arrayOf(applaunch.get().output, vanillaAppLaunch.output)
+                val applaunchDirs: MutableList<File> = mutableListOf()
+                applaunchOutputs.forEach {
+                    applaunchDirs.add(it.resourcesDir!!)
+                    applaunchDirs.addAll(it.classesDirs)
+                }
+                environment("MOD_CLASSES", applaunchDirs.joinToString(";") { "applaunch%%$it" })
+            }
         }
     }
-    commonProject.sourceSets["main"].resources
-            .filter { it.name.endsWith(".accesswidener") }
-            .files
-            .forEach {
-                accessWideners(it)
-            }
 
-    project.sourceSets["main"].resources
+    main.get().resources
             .filter { it.name.endsWith(".accesswidener") }
             .files
             .forEach { accessWideners(it) }
+
+    vanillaMain.resources
+            .filter { it.name.endsWith(".accesswidener") }
+            .files
+            .forEach { accessWideners(it) }
+}
+
+configurations.configureEach {
+    // Force jopt-simple to be exactly 5.0.4 because Mojang ships that version, but some transitive dependencies request 6.0+
+    resolutionStrategy {
+        force("net.sf.jopt-simple:jopt-simple:5.0.4")
+    }
 }
 
 dependencies {
@@ -218,11 +223,9 @@ dependencies {
     implementation(project(":", configuration = "accessors"))
     implementation(project(commonProject.path))
 
-    mlpatcherConfig.name(project(":modlauncher-patcher"))
-    vanillaAccessorsImplementation(project(commonProject.path))
-    vanillaMixinsImplementation(project(commonProject.path))
+    vanillaMixins.implementationConfigurationName(project(commonProject.path))
 
-    val installer = vanillaInstallerConfig.name
+    val installer = installerLibrariesConfig.name
     installer(apiLibs.gson)
     installer(platform(apiLibs.configurate.bom))
     installer(apiLibs.configurate.hocon)
@@ -240,98 +243,86 @@ dependencies {
         exclude(group = "net.sf.jopt-simple")
         asmExclusions.forEach { exclude(group = it.get().group, module = it.get().name) } // Use our own ASM version
     }
-    mlTransformersConfig.name(rootProject.project(":modlauncher-transformers"))
 
     // Add the API as a runtime dependency, just so it gets shaded into the jar
     add(vanillaInstaller.runtimeOnlyConfigurationName, "org.spongepowered:spongeapi:$apiVersion") {
         isTransitive = false
     }
 
-    val appLaunch = vanillaAppLaunchConfig.name
+    val bootstrap = bootstrapLibrariesConfig.name
+    bootstrap(libs.bootstrap)
+    bootstrap(libs.securemodules)
+    bootstrap(libs.asm.commons)
+    bootstrap(libs.asm.util)
 
-    val bootstrapLibraries = vanillaBootstrapLibrariesConfig.name
-    val libraries = vanillaLibrariesConfig.name
-
-    // Libraries only needed on the TCL (during main game lifecycle)
-
-    libraries("org.spongepowered:spongeapi:$apiVersion")
-    libraries(platform(apiLibs.adventure.bom)) {
-        exclude(group = "org.jetbrains", module = "annotations")
-    }
-    libraries(libs.adventure.serializerConfigurate4) {
-        exclude(group = "org.checkerframework", module = "checker-qual")
-    }
-    libraries(libs.javaxInject)
-    libraries(libs.configurate.jackson) {
-        exclude(group = "org.spongepowered", module = "configurate-core")
-        exclude(group = "org.checkerframework", module = "checker-qual")
-    }
-
-    libraries(libs.adventure.serializerAnsi) {
-        exclude(group = "org.jetbrains", module = "annotations")
-        exclude(group = "org.checkerframework", module = "checker-qual")
-    }
-
-    // Libraries needed during applaunch phase and runtime
-    bootstrapLibraries(libs.terminalConsoleAppender) {
-        exclude(group = "org.jline", module = "jline-reader")
-        exclude(group = "org.apache.logging.log4j", module = "log4j-core")
-    }
-    bootstrapLibraries(apiLibs.checkerQual)
-    bootstrapLibraries(libs.jline.terminal)
-    bootstrapLibraries(libs.jline.reader)
-    bootstrapLibraries(libs.jline.terminalJansi)
-    // Must be on the base ClassLoader since ModLauncher has a dependency on log4j
-    bootstrapLibraries(libs.log4j.jpl)
-
-    bootstrapLibraries(platform(apiLibs.configurate.bom))
-    bootstrapLibraries(apiLibs.configurate.core) {
-        exclude(group = "org.checkerframework", module = "checker-qual")
-    }
-    bootstrapLibraries(apiLibs.configurate.hocon) {
-        exclude(group = "org.spongepowered", module = "configurate-core")
-        exclude(group = "org.checkerframework", module = "checker-qual")
-    }
-    bootstrapLibraries(libs.log4j.api)
-    bootstrapLibraries(libs.log4j.core)
-    bootstrapLibraries(libs.log4j.slf4j2) {
-        exclude(group = "org.slf4j", module = "slf4j-api")
-    }
-
-    // Mixin and dependencies
-    bootstrapLibraries(libs.mixin)
-    bootstrapLibraries(libs.asm.util)
-    bootstrapLibraries(libs.asm.tree)
-    bootstrapLibraries(libs.guava) {
-        exclude(group = "com.google.errorprone", module = "error_prone_annotations")
-        exclude(group = "org.checkerframework", module = "checker-qual")
-    }
-
-    // Launch Dependencies - Needed to bootstrap the engine(s)
-    // Not needing to be source-visible past the init phase
-    // The ModLauncher compatibility launch layer
-    appLaunch(libs.modlauncher) {
-        exclude(group = "org.ow2.asm")
-        exclude(group = "org.apache.logging.log4j")
-        exclude(group = "net.sf.jopt-simple") // uses a newer version than MC
-    }
-    appLaunch(libs.asm.commons)
-    appLaunch(libs.grossJava9Hacks) {
+    val launcher = launcherLibrariesConfig.name
+    launcher(libs.modlauncher) {
         exclude(group = "org.apache.logging.log4j")
     }
-    appLaunch(apiLibs.pluginSpi) {
+    launcher(apiLibs.pluginSpi) {
         exclude(group = "org.checkerframework", module = "checker-qual")
         exclude(group = "com.google.code.gson", module = "gson")
         exclude(group = "org.apache.logging.log4j", module = "log4j-api")
         exclude(group = "org.apache.commons", module = "commons-lang3")
     }
-    appLaunch(libs.lmaxDisruptor)
+    launcher(libs.lmaxDisruptor)
+    launcher(apiLibs.checkerQual)
 
-    testplugins?.also {
-        vanillaAppLaunchRuntime(project(it.path)) {
-            exclude(group = "org.spongepowered")
-        }
+    launcher(libs.terminalConsoleAppender) {
+        exclude(group = "org.jline", module = "jline-reader")
+        exclude(group = "org.apache.logging.log4j", module = "log4j-core")
     }
+    launcher(libs.jline.terminal)
+    launcher(libs.jline.reader)
+    launcher(libs.jline.terminalJansi)
+
+    launcher(libs.log4j.jpl)
+    launcher(libs.log4j.api)
+    launcher(libs.log4j.core)
+    launcher(libs.log4j.slf4j2)
+
+    launcher(platform(apiLibs.configurate.bom))
+    launcher(apiLibs.configurate.core) {
+        exclude(group = "org.checkerframework", module = "checker-qual")
+    }
+    launcher(apiLibs.configurate.hocon) {
+        exclude(group = "org.spongepowered", module = "configurate-core")
+        exclude(group = "org.checkerframework", module = "checker-qual")
+    }
+
+    launcher(libs.mixin)
+    launcher(libs.asm.tree)
+    launcher(libs.guava) {
+        exclude(group = "com.google.errorprone", module = "error_prone_annotations")
+        exclude(group = "org.checkerframework", module = "checker-qual")
+    }
+
+    val service = serviceLibrariesConfig.name
+    service(project(transformersProject.path))
+
+    val game = gameLibrariesConfig.name
+    game("org.spongepowered:spongeapi:$apiVersion")
+    game(platform(apiLibs.adventure.bom)) {
+        exclude(group = "org.jetbrains", module = "annotations")
+    }
+    game(libs.adventure.serializerConfigurate4) {
+        exclude(group = "org.checkerframework", module = "checker-qual")
+    }
+    game(libs.javaxInject)
+    game(libs.configurate.jackson) {
+        exclude(group = "org.spongepowered", module = "configurate-core")
+        exclude(group = "org.checkerframework", module = "checker-qual")
+    }
+    game(libs.adventure.serializerAnsi) {
+        exclude(group = "org.jetbrains", module = "annotations")
+        exclude(group = "org.checkerframework", module = "checker-qual")
+    }
+
+    // TODO list shaded / managed libraries
+
+    val runTaskOnly = runTaskOnlyConfig.name
+    // Allow boot layer manipulation such as merging applaunch sourcesets
+    runTaskOnly("net.minecraftforge:bootstrap-dev:2.1.1")
 }
 
 val vanillaManifest = java.manifest {
@@ -409,18 +400,11 @@ tasks {
     val installerResources = project.layout.buildDirectory.dir("generated/resources/installer")
     vanillaInstaller.resources.srcDir(installerResources)
 
-    val downloadNotNeeded = configurations.register("downloadNotNeeded") {
-        extendsFrom(configurations.minecraft.get())
-        extendsFrom(vanillaInstallerConfig.get())
-    }
-
     val emitDependencies by registering(org.spongepowered.gradle.impl.OutputDependenciesToJson::class) {
         group = "sponge"
-        // everything in applaunch goes -> bootstrap, everything in libraries goes -> main (MC is inserted here too)
-        this.dependencies("bootstrap", vanillaAppLaunchConfig)
-        this.dependencies("main", vanillaLibrariesConfig)
-        // except what we're providing through the installer
-        this.excludedDependencies(downloadNotNeeded)
+        this.dependencies("bootstrap", launcherLibrariesConfig)
+        this.dependencies("main", gameManagedLibrariesConfig)
+        this.excludedDependencies(gameShadedLibrariesConfig)
 
         outputFile.set(installerResources.map { it.file("libraries.json") })
     }
